Fix #114891: bpy.ops.sequencer.split ignores passed frame

Caused by 0e01667e25f6 .

Above commit changed it so that operator properties (set from python)
were ignored for `split_frame` & `split_channel` in case
`use_cursor_position` is False.

Should be the other way around.

Pull Request: https://projects.blender.org/blender/blender/pulls/114905